--- a/notebook/Work Packages/Deliverable_WP2_Segmented_Proteins_Classifier_ASyn.ipynb
+++ b/notebook/Work Packages/Deliverable_WP2_Segmented_Proteins_Classifier_ASyn.ipynb
@@ -19,20 +19,27 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "os.chdir(\"../..\")\n",
-    "import numpy as np\n",
-    "from glob import glob\n",
+    "import fnmatch\n",
     "import random\n",
     "import time\n",
+    "from glob import glob\n",
+    "\n",
+    "import imageio as io\n",
+    "import numpy as np\n",
     "from sklearn import metrics\n",
+    "\n",
+    "from polygeist.label import process_files_and_folders\n",
     "from polygeist.slidecore.slide import AperioSlide as Slide\n",
     "from polygeist.slidecore.slide import SpectralSlideGenerator\n",
     "from polygeist.training import train_model\n",
-    "from polygeist.label import process_files_and_folders\n",
-    "from polygeist.utils import get_case_and_slide, load_filenames_and_generate_conditions, SegmentationFilesDirectoryHandler\n",
-    "from polygeist.validation import validate\n",
-    "import fnmatch \n",
-    "import imageio as io"
+    "from polygeist.utils import (\n",
+    "    SegmentationFilesDirectoryHandler,\n",
+    "    get_case_and_slide,\n",
+    "    load_filenames_and_generate_conditions,\n",
+    ")\n",
+    "from polygeist.validation import validate"
    ]
   },
   {
@@ -63,27 +70,26 @@
    "outputs": [],
    "source": [
     "config = {\n",
-    "     # This is where the SVS slides are stored\n",
-    "    \"svs_data_location\" : \"/home/brad/localnas/\",\n",
+    "    # This is where the SVS slides are stored\n",
+    "    \"svs_data_location\": \"/home/brad/localnas/\",\n",
     "    # This is the directory where all our segmentations, model files and sets will be stored\n",
-    "    \"working_root\" : \"/run/media/brad/ScratchM2/asyn_512_wp2_run/\", #\"/run/media/brad/ScratchM2/test_dump/\",#\n",
+    "    \"working_root\": \"/run/media/brad/ScratchM2/asyn_512_wp2_run/\",  # \"/run/media/brad/ScratchM2/test_dump/\",#\n",
     "    # These are our case filenames, which we shall parse to ensure case level segmenting in training and test\n",
-    "    \"case_files\" : \"Data/filenames/asyn_files.txt\",\n",
+    "    \"case_files\": \"Data/filenames/asyn_files.txt\",\n",
     "    # Segmentation Specific Information\n",
     "    # This is the stride over which we will look (the window size)\n",
     "    \"stride\": 512,\n",
     "    # The PUK set contains ID-INDEX_Protein in the filename, so here we specify 17_A (DMNoV, slide 17)\n",
-    "    \"index\" : \"17_A-syn\",    \n",
+    "    \"index\": \"17_A-syn\",\n",
     "    # This is the threshold under which a DAB activation will be considered noise\n",
-    "    \"raw_threshold\": -0.3, \n",
+    "    \"raw_threshold\": -0.3,\n",
     "    # This is the amount of pixels (as a percentage) per region that have to be activated to define a ROI\n",
     "    \"class_threshold\": 0.00125,\n",
     "    # PDNET Configuration\n",
-    "    \"batch_size\" : 16,  # Adjust for memory constraints (may affect results)\n",
-    "    \"num_epochs\" : 500,  # Adjust for time available for training (may affect results)\n",
-    "    \n",
+    "    \"batch_size\": 16,  # Adjust for memory constraints (may affect results)\n",
+    "    \"num_epochs\": 500,  # Adjust for time available for training (may affect results)\n",
     "    # Toggle this parameter if you have genearted simulated slides.\n",
-    "    \"simulated_data\" : False\n",
+    "    \"simulated_data\": False,\n",
     "}"
    ]
   },
@@ -151,8 +157,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd_train, pd_test = split_cases_into_train_and_test(case_conditions, 'PD')\n",
-    "con_train, con_test = split_cases_into_train_and_test(case_conditions, 'C')"
+    "pd_train, pd_test = split_cases_into_train_and_test(case_conditions, \"PD\")\n",
+    "con_train, con_test = split_cases_into_train_and_test(case_conditions, \"C\")"
    ]
   },
   {
@@ -164,13 +170,15 @@
    },
    "outputs": [],
    "source": [
-    "if config['simulated_data']:\n",
+    "if config[\"simulated_data\"]:\n",
     "    for subset in [pd_train, pd_test, con_train, con_test]:\n",
     "        for case in subset:\n",
     "            for n in np.arange(0, np.random.randint(10)):\n",
     "                filename = f\"{config['working_root']}/{case}-17_A-syn.svs{n}.jpg\"\n",
     "                print(f\"Generating and writing random image to {filename}\")\n",
-    "                SpectralSlideGenerator(width=config['stride'], height=config['stride'], filename=filename)"
+    "                SpectralSlideGenerator(\n",
+    "                    width=config[\"stride\"], height=config[\"stride\"], filename=filename\n",
+    "                )"
    ]
   },
   {
@@ -206,34 +214,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if not config['simulated_data']:\n",
+    "if not config[\"simulated_data\"]:\n",
     "    process_files_and_folders(\n",
     "        # The input data folder, this is where the SVS files are located\n",
-    "        config[\"svs_data_location\"], \n",
-    "        # Where we would like to dump the segmentations, and json files \n",
-    "        config[\"working_root\"], \n",
+    "        config[\"svs_data_location\"],\n",
+    "        # Where we would like to dump the segmentations, and json files\n",
+    "        config[\"working_root\"],\n",
     "        # This is the stride over which we will look (the window size)\n",
-    "        stride=config[\"stride\"], \n",
+    "        stride=config[\"stride\"],\n",
     "        # This is the threshold under which a DAB activation will be considered noise\n",
-    "        raw_threshold=config[\"raw_threshold\"], \n",
+    "        raw_threshold=config[\"raw_threshold\"],\n",
     "        # This is the amount of pixels (as a percentage) per region that have to be activated to define a ROI\n",
     "        class_threshold=config[\"class_threshold\"],\n",
     "        # Do not output full res density images\n",
-    "        output_density=False, \n",
+    "        output_density=False,\n",
     "        # Output json metadata & density information\n",
-    "        output_json=True, \n",
+    "        output_json=True,\n",
     "        # Skip outputting whole JPEGs\n",
     "        skip_jpeg=True,\n",
     "        # Automatically remove the slide background (note this is specialised to PUK Brain Slide Protocol)\n",
     "        auto_remove_background=True,\n",
     "        # Include all slides, but only A-beta stain.\n",
-    "        include_only_index=config[\"index\"], \n",
+    "        include_only_index=config[\"index\"],\n",
     "        # Output each ROI as a JPEG for CNN training (and obs)\n",
-    "        output_segmentation=True, \n",
+    "        output_segmentation=True,\n",
     "        # Please provide print feedback on processing\n",
     "        verbose=True,\n",
     "        # Toggle this flag if you are using synthetic data.  Note, your root should be full of synthetic jpegs\n",
-    "        synthetic=config[\"simulated\"])"
+    "        synthetic=config[\"simulated\"],\n",
+    "    )"
    ]
   },
   {
@@ -273,10 +282,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files_handler.split_and_copy_root_data_to_train_and_validation(case_filter_for_train=pd_train, condition='PD', training=True, slide_index_filter=[17])\n",
-    "files_handler.split_and_copy_root_data_to_train_and_validation(case_filter_for_train=con_train, condition='Controls', training=True, slide_index_filter=[17])\n",
-    "files_handler.split_and_copy_root_data_to_train_and_validation(case_filter_for_train=pd_test, condition='PD', training=False, slide_index_filter=[17])\n",
-    "files_handler.split_and_copy_root_data_to_train_and_validation(case_filter_for_train=con_test, condition='Controls', training=False, slide_index_filter=[17])"
+    "files_handler.split_and_copy_root_data_to_train_and_validation(\n",
+    "    case_filter_for_train=pd_train,\n",
+    "    condition=\"PD\",\n",
+    "    training=True,\n",
+    "    slide_index_filter=[17],\n",
+    ")\n",
+    "files_handler.split_and_copy_root_data_to_train_and_validation(\n",
+    "    case_filter_for_train=con_train,\n",
+    "    condition=\"Controls\",\n",
+    "    training=True,\n",
+    "    slide_index_filter=[17],\n",
+    ")\n",
+    "files_handler.split_and_copy_root_data_to_train_and_validation(\n",
+    "    case_filter_for_train=pd_test,\n",
+    "    condition=\"PD\",\n",
+    "    training=False,\n",
+    "    slide_index_filter=[17],\n",
+    ")\n",
+    "files_handler.split_and_copy_root_data_to_train_and_validation(\n",
+    "    case_filter_for_train=con_test,\n",
+    "    condition=\"Controls\",\n",
+    "    training=False,\n",
+    "    slide_index_filter=[17],\n",
+    ")"
    ]
   },
   {
@@ -286,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_dump_path = config[\"working_root\"] + '/partitioned_data'"
+    "training_dump_path = config[\"working_root\"] + \"/partitioned_data\""
    ]
   },
   {
@@ -313,13 +342,13 @@
     "l_control = len(glob(f\"{training_dump_path}/train/Controls/*.jpg\"))\n",
     "l_test = len(glob(f\"{training_dump_path}/train/PD/*.jpg\"))\n",
     "\n",
-    "if not config['simulated_data']:\n",
-    "    # This function will traverse our raw slides directory and gather candidate files that match our \n",
+    "if not config[\"simulated_data\"]:\n",
+    "    # This function will traverse our raw slides directory and gather candidate files that match our\n",
     "    # criteria of slide 17, and in the valid set\n",
     "    def get_valid_control_file_list(valid_cases):\n",
     "        matches = []\n",
-    "        for root, dirnames, filenames in os.walk(config['svs_data_location']):\n",
-    "            for filename in fnmatch.filter(filenames, '*.svs'):\n",
+    "        for root, dirnames, filenames in os.walk(config[\"svs_data_location\"]):\n",
+    "            for filename in fnmatch.filter(filenames, \"*.svs\"):\n",
     "                case, slide = get_case_and_slide(filename)\n",
     "                if case not in case_conditions:\n",
     "                    continue\n",
@@ -334,9 +363,11 @@
     "        # Randomise the list\n",
     "        random.shuffle(control_file_list)\n",
     "\n",
-    "        # Sample the top of the list '0th' element is the top which \n",
+    "        # Sample the top of the list '0th' element is the top which\n",
     "        # has just been shuffled\n",
-    "        slide = Slide(control_file_list[0]).get_slide_with_pixel_resolution_in_microns(2.)\n",
+    "        slide = Slide(control_file_list[0]).get_slide_with_pixel_resolution_in_microns(\n",
+    "            2.0\n",
+    "        )\n",
     "        filename = os.path.basename(control_file_list[0])\n",
     "\n",
     "        yy, xx, _ = slide.shape\n",
@@ -346,9 +377,16 @@
     "        y_pass = int(np.ceil(yy / 512))\n",
     "\n",
     "        # Make sure we are well within the slide tissue\n",
-    "        for x, y in zip(np.random.randint(4, x_pass-4, 25), np.random.randint(4, y_pass-4, 25)):\n",
-    "            im = slide[(y*512):(y*512)+512, (x*512):(x*512)+512, :].copy()\n",
-    "            io.imwrite(f\"{training_dump_path}/train/Controls/CI_{filename}_{control_injection_index}.jpg\", im)\n",
+    "        for x, y in zip(\n",
+    "            np.random.randint(4, x_pass - 4, 25), np.random.randint(4, y_pass - 4, 25)\n",
+    "        ):\n",
+    "            im = slide[\n",
+    "                (y * 512) : (y * 512) + 512, (x * 512) : (x * 512) + 512, :\n",
+    "            ].copy()\n",
+    "            io.imwrite(\n",
+    "                f\"{training_dump_path}/train/Controls/CI_{filename}_{control_injection_index}.jpg\",\n",
+    "                im,\n",
+    "            )\n",
     "            control_injection_index += 1\n",
     "\n",
     "        # Recount\n",
@@ -379,7 +417,11 @@
     "start_time = time.time()\n",
     "\n",
     "latest_model_name = train_model(\n",
-    "    training_dump_path, model_dump_dir, config[\"batch_size\"], config[\"num_epochs\"], strict=False\n",
+    "    training_dump_path,\n",
+    "    model_dump_dir,\n",
+    "    config[\"batch_size\"],\n",
+    "    config[\"num_epochs\"],\n",
+    "    strict=False,\n",
     ")\n",
     "\n",
     "time_elapsed = time.time() - start_time\n",
@@ -406,7 +448,7 @@
    "outputs": [],
    "source": [
     "## I am renaming the model name here as I am running this later, but you comment this out otherwise.\n",
-    "latest_model_name =  f\"PDNET_checkpoint_70_11_05_12\"\n",
+    "latest_model_name = f\"PDNET_checkpoint_70_11_05_12\"\n",
     "# Now we can run validation, on slide and case level\n",
     "# latest_model_name will have our last model, or it maybe specified manually.\n",
     "# E.g. model_file = f\"{model_dump_dir}/PDNET_checkpoint_490_16_18_48\"\n",
@@ -485,7 +527,7 @@
    "source": [
     "# Set an index for the threshold\n",
     "th = 70\n",
-    "print(f'Threshold = {thresholds[th]}, TP : {tpr[th]}, FP {fpr[th]}')"
+    "print(f\"Threshold = {thresholds[th]}, TP : {tpr[th]}, FP {fpr[th]}\")"
    ]
   },
   {
@@ -499,8 +541,10 @@
     "t = thresholds[th]\n",
     "N_0 = len(outputs[labels == 0])\n",
     "N_1 = len(outputs[labels == 1])\n",
-    "conf = [(np.sum(outputs[labels == 0] < t) / N_0, np.sum(outputs[labels == 0] >= t) / N_0),\n",
-    "(np.sum(outputs[labels == 1] < t) / N_1, np.sum(outputs[labels == 1] >= t) / N_1)]"
+    "conf = [\n",
+    "    (np.sum(outputs[labels == 0] < t) / N_0, np.sum(outputs[labels == 0] >= t) / N_0),\n",
+    "    (np.sum(outputs[labels == 1] < t) / N_1, np.sum(outputs[labels == 1] >= t) / N_1),\n",
+    "]"
    ]
   },
   {
@@ -511,9 +555,9 @@
    "outputs": [],
    "source": [
     "# Confusion matrix\n",
-    "print(''.ljust(10),        'Control'.ljust(10),           'Path'.ljust(10))\n",
-    "print('Control'.rjust(10), f'{conf[0][0]:.4f}'.ljust(10), f'{conf[0][1]:.4f}'.ljust(10))\n",
-    "print('Path'.rjust(10),    f'{conf[1][0]:.4f}'.ljust(10), f'{conf[1][1]:.4f}'.ljust(10))"
+    "print(\"\".ljust(10), \"Control\".ljust(10), \"Path\".ljust(10))\n",
+    "print(\"Control\".rjust(10), f\"{conf[0][0]:.4f}\".ljust(10), f\"{conf[0][1]:.4f}\".ljust(10))\n",
+    "print(\"Path\".rjust(10), f\"{conf[1][0]:.4f}\".ljust(10), f\"{conf[1][1]:.4f}\".ljust(10))"
    ]
   },
   {
@@ -526,11 +570,6 @@
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
