--- a/notebook/Work Packages/Deliverable_WP2_Segmented_Proteins_Classifier_Tau.ipynb
+++ b/notebook/Work Packages/Deliverable_WP2_Segmented_Proteins_Classifier_Tau.ipynb
@@ -19,14 +19,19 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "\n",
     "os.chdir(\"../..\")\n",
-    "import numpy as np\n",
     "import time\n",
+    "\n",
+    "import numpy as np\n",
     "from sklearn import metrics\n",
     "\n",
-    "from polygeist.training import train_model\n",
-    "from polygeist.utils import SegmentationFilesDirectoryHandler, load_filenames_and_generate_conditions\n",
     "from polygeist.label import process_files_and_folders\n",
+    "from polygeist.training import train_model\n",
+    "from polygeist.utils import (\n",
+    "    SegmentationFilesDirectoryHandler,\n",
+    "    load_filenames_and_generate_conditions,\n",
+    ")\n",
     "from polygeist.validation import validate"
    ]
   },
@@ -59,26 +64,23 @@
     "# for Tau here.\n",
     "config = {\n",
     "    # This is where the SVS slides are stored\n",
-    "    \"svs_data_location\" : \"/home/brad/localnas/\",\n",
+    "    \"svs_data_location\": \"/home/brad/localnas/\",\n",
     "    # This is the directory where all our segmentations, model files and sets will be stored\n",
-    "    \"working_root\" : \"/run/media/brad/ScratchM2/Tau_label_dump_256/\",\n",
-    "\n",
+    "    \"working_root\": \"/run/media/brad/ScratchM2/Tau_label_dump_256/\",\n",
     "    # These are our case filenames, which we shall parse to ensure case level segmenting in training and test\n",
-    "    \"case_files\" : \"Data/filenames/tau_files.txt\",\n",
-    "    \n",
+    "    \"case_files\": \"Data/filenames/tau_files.txt\",\n",
     "    # Segmentation Specific Information\n",
     "    # This is the stride over which we will look (the window size)\n",
     "    \"stride\": 256,\n",
     "    # The PUK set contains ID-INDEX_Protein in the filename, so here we specify 10_Tau (only use slide 10)\n",
-    "    \"index\" : \"10_Tau\",    \n",
+    "    \"index\": \"10_Tau\",\n",
     "    # This is the threshold under which a DAB activation will be considered noise\n",
-    "    \"raw_threshold\": -0.1, \n",
+    "    \"raw_threshold\": -0.1,\n",
     "    # This is the amount of pixels (as a percentage) per region that have to be activated to define a ROI\n",
     "    \"class_threshold\": 0.025,\n",
-    "    \n",
     "    # PDNET Configuration\n",
-    "    \"batch_size\" : 32,  # Adjust for memory constraints (may affect results)\n",
-    "    \"num_epochs\" : 500  # Adjust for time available for training (may affect results)\n",
+    "    \"batch_size\": 32,  # Adjust for memory constraints (may affect results)\n",
+    "    \"num_epochs\": 500,  # Adjust for time available for training (may affect results)\n",
     "}"
    ]
   },
@@ -101,29 +103,30 @@
    "source": [
     "process_files_and_folders(\n",
     "    # The input data folder, this is where the SVS files are located\n",
-    "    config[\"svs_data_location\"], \n",
-    "    # Where we would like to dump the segmentations, and json files \n",
-    "    config[\"working_root\"], \n",
+    "    config[\"svs_data_location\"],\n",
+    "    # Where we would like to dump the segmentations, and json files\n",
+    "    config[\"working_root\"],\n",
     "    # This is the stride over which we will look (the window size)\n",
-    "    stride=config[\"stride\"], \n",
+    "    stride=config[\"stride\"],\n",
     "    # This is the threshold under which a DAB activation will be considered noise\n",
-    "    raw_threshold=config[\"raw_threshold\"], \n",
+    "    raw_threshold=config[\"raw_threshold\"],\n",
     "    # This is the amount of pixels (as a percentage) per region that have to be activated to define a ROI\n",
     "    class_threshold=config[\"class_threshold\"],\n",
     "    # Do not output full res density images\n",
-    "    output_density=False, \n",
+    "    output_density=False,\n",
     "    # Output json metadata & density information\n",
-    "    output_json=True, \n",
+    "    output_json=True,\n",
     "    # Skip outputting whole JPEGs\n",
-    "    skip_jpeg=True, \n",
+    "    skip_jpeg=True,\n",
     "    # Automatically remove the slide background (note this is specialised to PUK Brain Slide Protocol)\n",
     "    auto_remove_background=True,\n",
-    "    # Include only slides with 10_Tau in their name, this is slide index 10, Tau labelling                          \n",
-    "    include_only_index=config[\"index\"], \n",
+    "    # Include only slides with 10_Tau in their name, this is slide index 10, Tau labelling\n",
+    "    include_only_index=config[\"index\"],\n",
     "    # Output each ROI as a JPEG for CNN training (and obs)\n",
-    "    output_segmentation=True, \n",
+    "    output_segmentation=True,\n",
     "    # Please provide print feedback on processing\n",
-    "    verbose=True)"
+    "    verbose=True,\n",
+    ")"
    ]
   },
   {
@@ -167,8 +170,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pd_train, pd_test = split_cases_into_train_and_test(case_conditions, 'PD')\n",
-    "con_train, con_test = split_cases_into_train_and_test(case_conditions, 'C')"
+    "pd_train, pd_test = split_cases_into_train_and_test(case_conditions, \"PD\")\n",
+    "con_train, con_test = split_cases_into_train_and_test(case_conditions, \"C\")"
    ]
   },
   {
@@ -208,10 +211,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files_handler.split_and_copy_root_data_to_train_and_validation(case_filter_for_train=pd_train, condition='PD', training=True)\n",
-    "files_handler.split_and_copy_root_data_to_train_and_validation(case_filter_for_train=con_train, condition='Controls', training=True)\n",
-    "files_handler.split_and_copy_root_data_to_train_and_validation(case_filter_for_train=pd_test, condition='PD', training=False)\n",
-    "files_handler.split_and_copy_root_data_to_train_and_validation(case_filter_for_train=con_test, condition='Controls', training=False)"
+    "files_handler.split_and_copy_root_data_to_train_and_validation(\n",
+    "    case_filter_for_train=pd_train, condition=\"PD\", training=True\n",
+    ")\n",
+    "files_handler.split_and_copy_root_data_to_train_and_validation(\n",
+    "    case_filter_for_train=con_train, condition=\"Controls\", training=True\n",
+    ")\n",
+    "files_handler.split_and_copy_root_data_to_train_and_validation(\n",
+    "    case_filter_for_train=pd_test, condition=\"PD\", training=False\n",
+    ")\n",
+    "files_handler.split_and_copy_root_data_to_train_and_validation(\n",
+    "    case_filter_for_train=con_test, condition=\"Controls\", training=False\n",
+    ")"
    ]
   },
   {
@@ -259,7 +270,11 @@
     "start_time = time.time()\n",
     "\n",
     "latest_model_name = train_model(\n",
-    "    training_dump_path, model_dump_dir, config[\"batch_size\"], config[\"num_epochs\"], strict=False\n",
+    "    training_dump_path,\n",
+    "    model_dump_dir,\n",
+    "    config[\"batch_size\"],\n",
+    "    config[\"num_epochs\"],\n",
+    "    strict=False,\n",
     ")\n",
     "\n",
     "time_elapsed = time.time() - start_time\n",
@@ -283,7 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "latest_model_name =  f\"PDNET_checkpoint_490_03_06_05\"\n",
+    "latest_model_name = f\"PDNET_checkpoint_490_03_06_05\"\n",
     "# Now we can run validation, on slide and case level\n",
     "# latest_model_name will have our last model, or it maybe specified manually.\n",
     "# E.g. model_file = f\"{model_dump_dir}/PDNET_checkpoint_490_16_18_48\"\n",
@@ -338,7 +353,7 @@
     "plt.ylabel(\"Hit Rate\", fontsize=18)\n",
     "plt.yticks(fontsize=18)\n",
     "plt.xticks(fontsize=18)\n",
-    "#plt.title(\"512um Patch Level Discrmination between Taupathology and Control Tau Segmentation\") \n",
+    "# plt.title(\"512um Patch Level Discrmination between Taupathology and Control Tau Segmentation\")\n",
     "plt.show()"
    ]
   },
@@ -351,7 +366,7 @@
    "source": [
     "# Set an index for the threshold\n",
     "th = 60\n",
-    "print(f'Threshold = {thresholds[th]}, TP : {tpr[th]}, FP {fpr[th]}')"
+    "print(f\"Threshold = {thresholds[th]}, TP : {tpr[th]}, FP {fpr[th]}\")"
    ]
   },
   {
@@ -367,7 +382,7 @@
     "N_1 = len(outputs[labels == 1])\n",
     "conf = [\n",
     "    (np.sum(outputs[labels == 0] < t) / N_0, np.sum(outputs[labels == 0] >= t) / N_0),\n",
-    "    (np.sum(outputs[labels == 1] < t) / N_1, np.sum(outputs[labels == 1] >= t) / N_1)\n",
+    "    (np.sum(outputs[labels == 1] < t) / N_1, np.sum(outputs[labels == 1] >= t) / N_1),\n",
     "]"
    ]
   },
@@ -379,18 +394,13 @@
    "outputs": [],
    "source": [
     "# Confusion matrix\n",
-    "print(''.ljust(10),        'Control'.ljust(10),           'Path'.ljust(10))\n",
-    "print('Control'.rjust(10), f'{conf[0][0]:.4f}'.ljust(10), f'{conf[0][1]:.4f}'.ljust(10))\n",
-    "print('Path'.rjust(10),    f'{conf[1][0]:.4f}'.ljust(10), f'{conf[1][1]:.4f}'.ljust(10))"
+    "print(\"\".ljust(10), \"Control\".ljust(10), \"Path\".ljust(10))\n",
+    "print(\"Control\".rjust(10), f\"{conf[0][0]:.4f}\".ljust(10), f\"{conf[0][1]:.4f}\".ljust(10))\n",
+    "print(\"Path\".rjust(10), f\"{conf[1][0]:.4f}\".ljust(10), f\"{conf[1][1]:.4f}\".ljust(10))"
    ]
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
-   "name": "python3"
-  },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
